# rust-service-template

./: .env.dev  Cargo.toml  Justfile  README.md  compose.yml  mise.toml
migrations/: 20250330205902_init.sql
src/: config.rs  database.rs  error.rs  lib.rs  main.rs  observability.rs  server.rs
src/config/: observability.rs
src/database/: something.rs
