[package]
name = "rust-service-template"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["env", "derive"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
poem = "3.1.8"
poem-openapi = { version = "5.1.12", features = ["swagger-ui"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
config = "0.15.11"
fastrace = { version = "0.7.9", features = ["enable"] }
serde_path_to_error = "0.1.17"
bon = "3.5.1"
async-signal = "0.2.10"
futures = "0.3.31"
log = "0.4.27"
fastrace-tracing = "0.1.1"
opentelemetry-otlp = { version = "0.29.0", features = [
  "grpc-tonic",
  "serialize",
  "tonic",
] }
fastrace-jaeger = "0.7.9"
fastrace-datadog = "0.7.9"
fastrace-opentelemetry = "0.10.0"
opentelemetry = "0.29.0"
opentelemetry_sdk = "0.29.0"
logforth = { version = "0.23.1", features = ["fastrace"] }
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
fastrace-poem = "0.1.0"
thiserror = "2.0.12"
